stretch fixed

--- a/FLEXBOX/style.css
+++ b/FLEXBOX/style.css
@@ -138,9 +138,9 @@ body{
     line-height: 90px;
     font-size: 20px;
 }
-.strech{
+.stretch{
     align-items: stretch;
 }
-.ai >stretch> div{
+.ai.stretch  div{
     height: unset;
 }
